# syrial

./: Cargo.toml  LICENSE  README.md
syrial/: Cargo.toml
syrial-derive/: Cargo.toml
syrial-derive/src/: lib.rs
syrial/src/: bitfield.rs  error.rs  lib.rs  serialize.rs  stream.rs
